<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItemActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideline0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

<!--    Content-->
    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline1"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline0"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline0" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline1"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline2"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline0" />

    <TextView
        android:id="@+id/addressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline2"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline0"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline1" />

    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/address"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline2"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline2"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline1" />

    <TextView
        android:id="@+id/phoneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline3"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline0"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline2" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phone"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline3"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline2"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline2" />

    <TextView
        android:id="@+id/typeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline4"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline0"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline3" />

    <Spinner
        android:id="@+id/contactTypeSpinner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline4"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline2"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline3" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:onClick="cancel"
        app:backgroundTint="#FFAAAAAA"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline5"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline0" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="create"
        android:text="@string/create"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline5"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline2" />

</androidx.constraintlayout.widget.ConstraintLayout>